<resources>
    <string name="app_name">CeliaCare</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Places</string>
    <string name="title_notifications">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_login">My account</string>
    <string name="registro">Create a new account</string>
    <string name="contra">Password</string>
    <string name="correo" translatable="false">Email</string>
    <string name="mostrar_contra">Show password</string>
    <string name="title_news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_register">New user</string>
    <string name="already_registered">Already registered?</string>
    <string name="repite_contra">Password again</string>
    <string name="name">Full name</string>
    <string name="title_welcome">Can´t wait for having a new member of the CeliaCare family, welcome abroad!</string>
    <string name="create_account">Create</string>
    <string name="suggest_create">Not a member yet?</string>
    <string name="welcome_back">Hey! Welcome back to CeliaCare</string>
    <string name="button_login">Login</string>
    <string name="forgot_password">Forgot my password</string>
    <string name="email_format">The email format isn\'t correct</string>
    <string name="password_format">The password is too short</string>
    <string name="email_required">An email is needed</string>
    <string name="password_required">A password is needed</string>
    <string name="password_length">Password needs to have 8 characters or more</string>
    <string name="email_password_incorrect">Make sure that the email and password are correct</string>
    <string name="recover_password">Recover password</string>
    <string name="cancel">Cancel</string>
    <string name="email_sent">Recovery email sent</string>
    <string name="email_not_sent">Check that the email is already registered</string>
    <string name="successful_register">User registered successfully. Remember to verify the account in your email.</string>
    <string name="failed_register">Make sure that the email isn\'t registered yet.</string>
    <string name="name_required">The name is required</string>
    <string name="password_match">Both passwords don\'t match</string>
    <string name="welcome_to_app">Welcome to CeliaCare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email_not_verified">Please verify your email before login</string>
    <string name="email_verification_sent">You have been sent the authentication email again</string>
    <string name="placeTitle">Title of the place</string>
    <string name="cityTitle">City where the place is located</string>
    <string name="places_hint">Shops and restaurants</string>
    <string name="news_hint">News about the celiac world</string>
    <string name="community_hint">Chat with the community</string>
    <string name="myaccount_hint">Access your account</string>
    <string name="home_introduction">Explore gluten-free places, keep up to date with the latest news, connect with the community and much more on Celiapp - welcome to your gluten-free world!</string>
    <string name="home_introduction2">These are some of the options you can do from the CeliaCare app:</string>
    <string name="places_myplaces">My places</string>
    <string name="places_map">Map</string>
    <string name="close_map">Close map</string>
    <string name="newsTitle">Title of the news</string>
    <string name="newsDescription">Description of the news</string>
    <string name="descriptionTitle">Description of the place</string>
    <string name="news_scrolling">News detail</string>
    <string name="places_scrolling">Place detail</string>
    <string name="news_scrolling_title">News title</string>
    <string name="news_title_test" translatable="false">New Study Reveals Promising Strategies for Managing Celiac Disease</string>
    <string name="news_description_test" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id justo velit. Donec et facilisis sapien. Nulla facilisi. Vestibulum eget massa eget odio dignissim tristique. Vestibulum in magna et neque condimentum viverra. Fusce facilisis enim non tortor tincidunt, vitae aliquet quam congue. Nam viverra ligula vel nisi tristique, a ultrices velit aliquet. Morbi faucibus ex id sapien pellentesque, vel varius libero dictum. Mauris id volutpat sapien, at tristique elit. Sed ut luctus nibh. Cras eget sapien hendrerit, feugiat sapien eu, dictum turpis. Sed gravida nisl vel lacus congue sollicitudin. Curabitur a pulvinar ante, sed efficitur nulla.\n\nVivamus sed dui vitae mauris congue tincidunt. Nam euismod mauris sit amet tellus pellentesque eleifend. Fusce feugiat metus sed risus aliquet tristique. Duis sagittis, purus eu feugiat varius, lectus lacus vestibulum sem, at aliquam libero dui vitae massa. Maecenas sit amet tellus eu ex aliquet congue nec sit amet tortor.</string>
    <string name="places_scrolling_title">Places list</string>
    <string name="your_location">My location</string>
    <string name="place_save_message_1">Place</string>
    <string name="place_save_message_2">saved on your profile</string>
    <string name="places_my_places">My saved places</string>
    <string name="button_confirm">Ok</string>
    <string name="notLoguedTitle">Ey! You are not logued in</string>
    <string name="notLoguedMessage">In order to access to your favourite places, you need to log in first.</string>
    <string name="remove_favplace_title">Delete place from favorites</string>
    <string name="remove_favplace_message">Are you sure that you want to delete</string>
    <string name="remove_favplace_message2">from favorites?</string>
    <string name="place_removed_fav">This place has been removed from your favorites</string>
    <string name="title_back">Back</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="password_changed">Password changed succesfully</string>
</resources>