<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/establecimientos"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/comunidad"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/icons8_usuario_masculino_en_c_rculo_100"
        android:title="@string/title_login" />
</menu>