<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mfc.celiacare.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_places"
            app:destination="@id/navigation_places" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_news" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>

    <fragment
        android:id="@+id/navigation_places"
        android:name="com.mfc.celiacare.ui.places.PlacesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_places" >
        <action
            android:id="@+id/action_navigation_places_to_navigation_map"
            app:destination="@id/navigation_map" />
        <action
            android:id="@+id/action_navigation_places_to_navigation_places_scrolling"
            app:destination="@id/navigation_places_scrolling" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.mfc.celiacare.ui.places.MapFragment"
        android:label="@string/places_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.mfc.celiacare.ui.news.NewsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_navigation_news_to_navigation_news_scrolling"
            app:destination="@id/navigation_news_scrolling" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.mfc.celiacare.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
    <action
        android:id="@+id/action_navigation_login_to_navigation_account"
        app:destination="@id/navigation_account" />
    </fragment>

    <activity
        android:id="@+id/navigation_register"
        android:name="com.mfc.celiacare.ui.login.RegisterActivity"
        android:label="@string/title_register"
        tools:layout="@layout/activity_register" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.mfc.celiacare.ui.account.AccountFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_account">
        <action
        android:id="@+id/action_navigation_account_to_navigation_login"
        app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_places_scrolling"
        android:name="com.mfc.celiacare.ui.places.PlacesScrollingFragment"
        android:label="@string/places_scrolling"
        tools:layout="@layout/fragment_places_scrolling">
    </fragment>

    <fragment
        android:id="@+id/navigation_news_scrolling"
        android:name="com.mfc.celiacare.ui.news.NewsScrollingFragment"
        android:label="@string/news_scrolling"
        tools:layout="@layout/fragment_news_scrolling">
    </fragment>

</navigation>