<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:gravity="center"
    android:listSelector="#BFBFBF"
    android:orientation="horizontal"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="5dip">

    <LinearLayout
        android:id="@+id/list_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dp"
        android:padding="3dp">

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/establecimientos"
            android:scaleType="centerCrop"/>
    </LinearLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/list_image_layout"
        android:layout_alignTop="@+id/list_image_layout"
        android:layout_alignParentRight="true"
        android:text="@string/placeTitle"
        android:textColor="#040404"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_toRightOf="@+id/list_image_layout"
        android:layout_marginTop="1dp"
        android:layout_toLeftOf="@+id/deleteImageView"
        android:text="@string/cityTitle"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="#5C5C5C"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cityTextView"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@+id/list_image_layout"
        android:layout_toLeftOf="@+id/deleteImageView"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/descriptionTitle"
        android:textColor="#343434"
        android:textSize="15dp" />

    <ImageView
        android:id="@+id/deleteImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_delete"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"/>
</RelativeLayout>
