<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/places_bg"
                android:layout_marginTop="30dp"
                android:padding="3dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_dashboard"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/places_hint"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/gray"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="8dp"
                    android:src="@drawable/place_homeicon"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/news_bg"
                android:layout_marginTop="30dp"
                android:padding="3dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_notifications"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/news_hint"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/gray"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="8dp"
                    android:src="@drawable/news_homeicon"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/community_bg"
                android:layout_marginTop="30dp"
                android:padding="3dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_community"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/community_hint"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/gray"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="8dp"
                    android:src="@drawable/community_homeicon"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/myaccount_bg"
                android:layout_marginTop="30dp"
                android:padding="3dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_login"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@strings/myaccount_hint"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/gray"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="8dp"
                    android:src="@drawable/account_homeicon"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
